vault/bsc/probes/safezone_borrow_to_const_void_cast.expected.stderr
<probe>:10:51: error: conversion from type 'int *_Borrow' to 'const void *_Borrow' is forbidden in the safe zone
    const void *_Borrow cv = (const void *_Borrow)b; // B: add-const + void widening
                                                  ^
1 error generated.
